Fix home featured alignment

--- a/app/assets/stylesheets/components/_home_feature.scss
+++ b/app/assets/stylesheets/components/_home_feature.scss
@@ -86,6 +86,7 @@
 
     li {
       @include column(3);
+      padding: 0;
       min-height: 186px;
       margin-bottom: 0;
     }
